--- a/src/login.pug
+++ b/src/login.pug
@@ -6,7 +6,7 @@ html
         title IAS - Integrated Application Skeleton
 
     body
-        form(action="/api/samplePassport", method="POST")
+        form(action="/api/sampleLocalPassport", method="POST")
             div
                 label User ID :
                 input(type="text", name="user_id")
@@ -15,3 +15,5 @@ html
                 input(type="password", name="passwd")
             div
                 input(type="submit", value="Login")
+        form(action="/api/sampleFacebookPassport", method="POST")
+            input(type="submit", value="Facebook Login")
