[v0.17.0]Addition of API Modules / Modification of IAS Structures.

--- a/src/ajax/ajax.pug
+++ b/src/ajax/ajax.pug
@@ -2,11 +2,7 @@ doctype html
 
 html
     head
-        meta(charset="utf8")
-        title IAS - Integrated Application Skeleton
-
-        script(src="/libs/jquery/dist/jquery.js")
-        script(src="/public/js/ajax.js")
+        include ../public/jade/header
         script(src="/ajax/ajax.js")
 
     body
