--- a/src/index.pug
+++ b/src/index.pug
@@ -2,8 +2,7 @@ doctype html
 
 html
     head
-        meta(charset="utf8")
-        title IAS - Integrated Application Skeleton
+        include ./public/jade/header
 
     body
         p IAS - Integrated Application Skeleton
