[v0.20.0]Addition of WebSocket.

--- a/src/public/jade/header.pug
+++ b/src/public/jade/header.pug
@@ -17,6 +17,7 @@ link(rel="stylesheet", href="/libs/bootstrap/dist/css/bootstrap.css")
 
 // Import Library(JS)
 script(src="/libs/jquery/dist/jquery.js")
+script(src="/public/js/socket.io.js")
 
 // Import Custom Library(JS)
 script(src="/public/js/ajax.js")
