[v0.21.0]Addition of Sample Code(Sign Up, Sign In, Sign Out, Multipart, AJAX, WebSocket).

--- a/src/ajax/ajax.pug
+++ b/src/ajax/ajax.pug
@@ -7,7 +7,7 @@ html
 
     body
         button(onclick="ajaxGetSample()") AJAX GET Sample
-        div(class="get_res")
+        div.get_res
 
         button(onclick="ajaxPostSample()") AJAX POST Sample
-        div(class="post_res")
+        div.post_res
