--- a/src/index.pug
+++ b/src/index.pug
@@ -3,6 +3,20 @@ doctype html
 html
     head
         include ./public/jade/header
+        script(src="/index.js")
 
     body
         p IAS - Integrated Application Skeleton
+
+        div
+            a(href="/signup/signup.html") Sign Up
+        div
+            a(href="/signin/signin.html") Sign In
+        div
+            a(href="/signout/signout.html") Sign Out
+        div
+            a(href="/multipart/multipart.html") Multipart
+        div
+            a(href="/ajax/ajax.html") AJAX
+        div
+            a(href="/websocket/websocket.html") WebSocket
