--- a/src/websocket/websocket.pug
+++ b/src/websocket/websocket.pug
@@ -3,7 +3,7 @@ doctype html
 html
     head
         include ../public/jade/header
-        script(src="/socket/socket.js")
+        script(src="/websocket/websocket.js")
 
     body
         div
