--- a/src/signin/signin.pug
+++ b/src/signin/signin.pug
@@ -3,10 +3,10 @@ doctype html
 html
     head
         include ../public/jade/header
-        script(src="/login/login.js")
+        script(src="/signin/signin.js")
 
     body
-        div(class="local-login")
+        div.local-login
             div
                 label User ID :
                 input(type="text", name="user_id")
@@ -14,9 +14,9 @@ html
                 label Password :
                 input(type="password", name="passwd")
             div
-                button(onClick="login()") Login
+                button(onClick="signin()") Login
 
         form(action="/api/sampleFacebookPassport", method="POST")
             input(type="submit", value="Facebook Login")
 
-        div(class="res")
+        div.res
