[v0.22.0]Modification of Routing response method(send->json), Error page, WebSocket log, README.md.

--- a/src/multipart/multipart.pug
+++ b/src/multipart/multipart.pug
@@ -6,7 +6,7 @@ html
         title IAS - Integrated Application Skeleton
 
     body
-        form(action="/api/sampleFileUpload", enctype="multipart/form-data", method="POST")
+        form(action="/api/sampleMultipart", enctype="multipart/form-data", method="POST")
             div
                 h1 File Upload
                 input(type="file", name="picture")
